kuttl/setup/v1_namespace_ctf-ui-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: ctf-ui-operator
  name: ctf-ui-operator
